--- a/01-EDA.ipynb
+++ b/01-EDA.ipynb
@@ -399,7 +399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -409,7 +409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -537,7 +537,7 @@
               "4          1               1         79084.10       No  "
             ]
           },
-          "execution_count": 10,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -548,7 +548,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -600,7 +600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -738,7 +738,7 @@
               "max      199992.480000  "
             ]
           },
-          "execution_count": 13,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -779,7 +779,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -817,7 +817,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -840,13 +840,214 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "No hay variables numéricas con correlaciones fuertes que deban ser eliminadas del dataset."
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Test f_classif para variables numéricas en problemas de clasificación:\n",
+        "\n",
+        "- Hipótesis nula (H0): No hay diferencias significativas entre las medias de la variable de entrada en los diferentes grupos definidos por los valores de la variable target.\n",
+        "- Hipótesis alternativa (H1): Al menos una de las medias de la variable de entrada difiere significativamente entre los grupos definidos por los valores de la variable target.\n",
+        "\n",
+        "Se rechaza H0 si valor p < 0.05 y se concluye que la variable contiene información relacionada con la variable objetivo"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "kZtsvNSBZPC2"
-      },
-      "outputs": [],
-      "source": []
+      "execution_count": 41,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>f1-score</th>\n",
+              "      <th>p-value</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>EstimatedSalary</th>\n",
+              "      <td>1.46326</td>\n",
+              "      <td>0.22644</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Tenure</th>\n",
+              "      <td>1.96016</td>\n",
+              "      <td>0.16153</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>CreditScore</th>\n",
+              "      <td>7.34452</td>\n",
+              "      <td>0.00674</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>NumOfProducts</th>\n",
+              "      <td>22.91522</td>\n",
+              "      <td>0.00000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Balance</th>\n",
+              "      <td>142.47383</td>\n",
+              "      <td>0.00000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Age</th>\n",
+              "      <td>886.06327</td>\n",
+              "      <td>0.00000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                 f1-score  p-value\n",
+              "EstimatedSalary   1.46326  0.22644\n",
+              "Tenure            1.96016  0.16153\n",
+              "CreditScore       7.34452  0.00674\n",
+              "NumOfProducts    22.91522  0.00000\n",
+              "Balance         142.47383  0.00000\n",
+              "Age             886.06327  0.00000"
+            ]
+          },
+          "execution_count": 41,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "from sklearn.feature_selection import f_classif\n",
+        "\n",
+        "X = df[num_cols]\n",
+        "y = df.Exited_C.values\n",
+        "\n",
+        "f_test = f_classif(X,y)\n",
+        "pd.set_option('display.float_format', lambda x: '%.5f' % x) # para mostrar flotantes sin notación científica\n",
+        "f_test_df = pd.DataFrame(f_test, columns=num_cols).T.rename(columns = {0:'f1-score', 1:'p-value'}).sort_values(by = 'p-value', ascending=False)\n",
+        "f_test_df"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Test Chi2 para variables categóricas en problemas de clasificación:\n",
+        "\n",
+        "- Hipótesis nula (H0): La frecuencia observada de cada valor en las variables de entrada es igual para cada valor de la variable de salida.\n",
+        "- Hipótesis alternativa (H1): La frecuencia observada de cada valor en las variables de entrada es diferente para al menos un valor de la variable de salida.\n",
+        "\n",
+        "Se rechaza la hipótesis nula si valor p < 0.05 y se concluye que hay relación significativa entre la variable de entrada categórica y la variable target categórica"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 57,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>f1-score</th>\n",
+              "      <th>p-value</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>HasCrCard</th>\n",
+              "      <td>0.15004</td>\n",
+              "      <td>0.69850</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Geography</th>\n",
+              "      <td>11.85325</td>\n",
+              "      <td>0.00058</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Gender</th>\n",
+              "      <td>51.53993</td>\n",
+              "      <td>0.00000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>IsActiveMember</th>\n",
+              "      <td>118.19941</td>\n",
+              "      <td>0.00000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                f1-score  p-value\n",
+              "HasCrCard        0.15004  0.69850\n",
+              "Geography       11.85325  0.00058\n",
+              "Gender          51.53993  0.00000\n",
+              "IsActiveMember 118.19941  0.00000"
+            ]
+          },
+          "execution_count": 57,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "from sklearn.feature_selection import chi2\n",
+        "from sklearn.preprocessing import OrdinalEncoder\n",
+        "\n",
+        "# codificamos las variables categóricas\n",
+        "encoder = OrdinalEncoder()\n",
+        "X = df[cat_cols].drop(columns=['Exited_C'])\n",
+        "X = pd.DataFrame(encoder.fit_transform(X.values), columns = X.columns.tolist())\n",
+        "y = df.Exited_C.values\n",
+        "\n",
+        "chi2_test = chi2(X,y)\n",
+        "pd.set_option('display.float_format', lambda x: '%.5f' % x) # para mostrar flotantes sin notación científica\n",
+        "chi2_test_df = pd.DataFrame(chi2_test, columns=X.columns.tolist()).T.rename(columns = {0:'f1-score', 1:'p-value'}).sort_values(by = 'p-value', ascending=False)\n",
+        "chi2_test_df"
+      ]
     },
     {
       "attachments": {},
@@ -858,13 +1059,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 61,
       "metadata": {
         "id": "5vwJBKdCYxHD"
       },
       "outputs": [],
       "source": [
-        "df.drop(columns = ['Exited_C'], inplace= True)\n",
         "df.to_csv('datasets/data_to_model.csv')"
       ]
     }
@@ -878,7 +1078,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.8.10"
     }
   },
